--- a/group_vars/ios.yml
+++ b/group_vars/ios.yml
@@ -1,6 +1,8 @@
 cli:
-  host: "{{inventory_hostname}}"
-  username:  "{{TACACS-NET}}"
-  password:  "{{TACACS-NET}}"
-  transport: cli
-  
+  ansible_connection: network_cli
+  ansible_network_os: ios
+  ansible_user: myuser
+  ansible_ssh_pass: !vault...
+  ansible_become: yes
+  ansible_become_method: enable
+  ansible_become_pass: !vault...
