--- a/group_vars/ios.yml
+++ b/group_vars/ios.yml
@@ -1,8 +1,7 @@
-cli:
-  ansible_connection: network_cli
-  ansible_network_os: ios
-  ansible_user: myuser
-  ansible_ssh_pass: !vault...
-  ansible_become: yes
-  ansible_become_method: enable
-  ansible_become_pass: !vault...
+ansible_connection: network_cli
+ansible_network_os: ios
+ansible_user: TACACS-NET
+ansible_ssh_pass: TACACS-NET        
+ansible_become: yes
+ansible_become_method: enable
+ansible_become_pass: TACACS-NET
