--- a/showip.yml
+++ b/showip.yml
@@ -3,7 +3,7 @@
 
 - hosts: all
   gather_facts: false
-  remote_user: TACACS-NET
+  remote_user: {{ ansible_user }}
   
   vars: 
     command_list:
