--- a/ping.yml
+++ b/ping.yml
@@ -1,5 +1,5 @@
 ---
-- name: check connectivity to 8.8.8.8
+- name: Audet Network Test Playbook
   hosts: ios_devices
     
 tasks:
@@ -33,6 +33,5 @@ tasks:
     wait_for:
       - result[0] contains "!!!"
     register: result
-      failed_when: "not '!!!' in result.stdout[0]"
-      
+      failed_when: "not '!!!' in result.stdout[0]" 
       
