--- a/ping.yml
+++ b/ping.yml
@@ -1,25 +1,27 @@
 ---
 - name: Audet Network Test Playbook
- hosts: ios_devices
+- hosts: ios_devices
+  gather_facts: no
  
- tasks:
-  - name: run show version on remote device
-  ios_command:
+  tasks:
+
+   - name: run show version on remote device
+   ios_command:
     commands: show version
 
-  - name: run show version on remote device
-  ios_command:
+   - name: run show version on remote device
+   ios_command:
     commands: show version
     wait_for: result[0] contains IOS
     
-  - name: run multiple commands on remote nodes
-  ios_command:
+   - name: run multiple commands on remote nodes
+   ios_command:
     commands:
       - show version
       - show interfaces
 
-  - name: run multiple commands and evaluate the output
-  ios_command:
+   - name: run multiple commands and evaluate the output
+   ios_command:
     commands:
       - show version
       - show interfaces
@@ -27,8 +29,8 @@
       - result[0] contains IOS
       - result[1] contains Loopback0
 
-  - name: ping google
-  ios_command:
+   - name: ping google
+   ios_command:
     commands: ping 8.8.8.8        
     wait_for:
       - result[0] contains "!!!"
